# ivs-proj2

./: .gitignore  README.MD
plan/: xkovarj00_xsvancd00_xvanatv00_plan.txt
profiling/: vystup.txt  vystup50mil.txt  zprava.txt
src/: Doxyfile  Makefile
src/Calculator/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Profiling/: CMakeLists.txt  deviation.cpp
src/Tests/: CMakeLists.txt  math_lib_tests.cpp
src/lib/: math_lib.cpp  math_lib.h
